--- a/FinalPrj/pom.xml
+++ b/FinalPrj/pom.xml
@@ -228,6 +228,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.5.0-b01</version>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
