--- a/FinalPrj/src/main/webapp/WEB-INF/web.xml
+++ b/FinalPrj/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
-	<!-- 	security-filter -->
+	<!-- security-filter -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -65,5 +65,9 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<listener>
+		<listener-class>co.yedam.finalprj.common.web.SessionListener</listener-class>
+	</listener>
 
 </web-app>
