--- a/FinalPrj/pom.xml
+++ b/FinalPrj/pom.xml
@@ -280,18 +280,18 @@
 		</dependency>
 		
 		<!-- logback-core.jar 추가 -->
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.2.3</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>ch.qos.logback</groupId> -->
+<!-- 			<artifactId>logback-core</artifactId> -->
+<!-- 			<version>1.2.3</version> -->
+<!-- 		</dependency> -->
 
 		<!-- logback-classic.jar 추가 -->
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>ch.qos.logback</groupId> -->
+<!-- 			<artifactId>logback-classic</artifactId> -->
+<!-- 			<version>1.2.3</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
