--- a/FinalPrj/src/main/webapp/WEB-INF/web.xml
+++ b/FinalPrj/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
 			/WEB-INF/spring/root-context.xml
 			/WEB-INF/spring/datasource-context.xml
 			/WEB-INF/spring/security-context.xml
+			/WEB-INF/spring/message-context.xml
 		</param-value>
 	</context-param>
 
